--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": "https://music-app-react.github.io/react-gh-pages",
+  "homepage": "https://alardant.github.io/My-React-music-App/",
   "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
